--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -233,8 +233,7 @@ section {
 }
 
 .contact h2 {
-  text-align: center;
-  background: #fce138;
+  color: #fce138;
 }
 
 .contact-info iframe {
@@ -250,3 +249,22 @@ section {
   margin: 30px 0 0 60px;
   color: white;
 }
+
+.contact-info h3 {
+  color: #fce138;
+  font-size: 32px;
+}
+
+.contact-info p,
+.contact-info address {
+  margin: 20px 0;
+  line-height: 1.5;
+  font-size: 20px;
+  font-style: normal;
+}
+
+.contact-info a {
+  color: #fce138;
+}
+
+/* REACH OUT STYLES END */
